--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
-sudo: true
+sudo: false
 language: python
 python:
-- '3.5'
+  - '3.5'
 install:
-- pip install -r requirements.txt
-- pip install coveralls
+  - pip install -r requirements.txt
+  - pip install coveralls
 script:
-- python create_local_settings.py
-- python manage.py migrate
-- coverage run manage.py test
+  - python create_local_settings.py
+  - python manage.py migrate
+  - coverage run manage.py test
 notifications:
   email: false
 after_success:
-coveralls
+  coveralls
