--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ django==1.10.5
 django-bootstrap3==8.1.0
 django-registration-redux==1.4
 django-dual-authentication==1.0.0
+django-cron==0.5.0
+django-dbbackup==3.1.3
 django-debug-toolbar
